# r105

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.codewhale/: instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: SKILLS.md  TOOLS.md  homebrew.rb  scoop.json
rova/: __init__.py  __main__.py  cli.py  client.py  commands.py  config.py  logging.py  mcp_client.py  plugins.py  sandbox.py  sessions.py  skills.py  state.py  tools.py
rova/themes/: rova.tcss
rova/tui/: app.py
rova/tui/screens/: chat.py  help_screen.py  history_screen.py
rova/tui/widgets/: chat_view.py  command_palette.py  diff_view.py  file_explorer.py  input_area.py  sidebar.py  status_bar.py
skills/: code-check.md  concise.md  deep-review.md  external  rag-answer.md
tests/: conftest.py  test_client.py  test_client_chaos.py  test_command_palette.py  test_commands.py  test_integration.py  test_skills.py  test_state.py  test_tools.py
