[project]
name = "rova"
version = "0.2.0"
description = "Rova — Rapid On-demand Virtual Assistant: rich terminal frontend for llama-router"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "textual>=2.0.0",
    "rich",
    "python-pptx",
    "python-docx",
    "fpdf2",
    "pillow",
]

[project.scripts]
rova = "rova.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rova*"]
